Update UI and fix layout

--- a/index.html
+++ b/index.html
@@ -245,8 +245,34 @@
               </div>
               <div>
                 <h4>Email</h4>
-                <p style="color: var(--text-muted)">aa@gmail.com</p>
+                <p style="color: var(--text-muted)">
+                  aa01033458035aa@gmail.com
+                </p>
               </div>
+            </div>
+
+            <div class="social-media">
+              <ul>
+                <li class="face">
+                  <a
+                    href="https://www.facebook.com/ali.khaled.6.6.06/?locale=ar_AR"
+                    target="_blank"
+                    ><i class="fa-brands fa-facebook-f"></i
+                  ></a>
+                </li>
+                <li class="linked">
+                  <a
+                    href="https://www.linkedin.com/in/ali-khaled-014b21344/"
+                    target="_blank"
+                    ><i class="fa-brands fa-linkedin"></i
+                  ></a>
+                </li>
+                <li class="insta">
+                  <a href="https://www.instagram.com/a17a6_6/" target="_blank"
+                    ><i class="fa-brands fa-instagram"></i
+                  ></a>
+                </li>
+              </ul>
             </div>
           </div>
 
